Fixing alignments of CSS icons

--- a/DeforaOS/Apps/Web/DaPortal/css/icons.css
+++ b/DeforaOS/Apps/Web/DaPortal/css/icons.css
@@ -19,7 +19,6 @@ div.icon {
 
 div.icon, span.icon {
 	padding:		2px;
-	padding-left:		18px;
 }
 
 div.icon, div.thumbnail, span.icon, span.thumbnail {
